--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,33 @@ a {
 .parameters {
   text-align: center;
 }
+.weather-forecast {
+  margin-top: 50px;
+}
+
+.weather-forecast h3 {
+  color: rgb(135, 135, 135);
+  font-size: 14px;
+  text-align: center;
+  font-weight: 400;
+  height: 15px;
+  line-height: 15px;
+  padding-top: 7px;
+}
+
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 50px;
+  width: 50px;
+}
+
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 15px;
+  height: auto;
+  white-space: nowrap;
+}
