--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ a {
 
 .weather-app {
   padding: 50px;
-  border: 3px solid #bbdff5;
+  border: 3px solid rgb(219, 219, 219);
   border-radius: 8px;
   background-image: linear-gradient(190deg, #ffffff 0%, #009efd 70%);
   opacity: 0.9;
@@ -82,12 +82,12 @@ a {
   text-align: center;
 }
 
-.line {
-  border-top: 3px solid white;
-}
-
 .weather-forecast {
   margin-top: 40px;
+  border: 3px solid white;
+  border-radius: 10px;
+  padding: 20px 0;
+  padding-right: 10px;
 }
 
 .weather-forecast h3 {
