--- a/src/style.css
+++ b/src/style.css
@@ -40,9 +40,13 @@ a {
 
 .weather-app {
   padding: 50px;
-  border: 3px solid rgb(219, 219, 219);
+  border: 3px solid #64d8e5;
   border-radius: 8px;
-  background-image: linear-gradient(190deg, #ffffff 0%, #009efd 70%);
+  background-image: linear-gradient(
+    135deg,
+    rgb(82, 229, 231) 10%,
+    rgb(19, 12, 183) 100%
+  );
   opacity: 0.9;
 }
 
